examples/test/testpolicy7283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7283
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key4: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value3
          key24: value13
          key20: value33
      podSelector:
        matchLabels:
          key37: value36
          key49: value27
